--- a/Projectstyle.css
+++ b/Projectstyle.css
@@ -2,8 +2,8 @@
 {
     display: grid;
     grid-template-columns: 2fr 5fr; /*To position the header img and header */
-    background-color: black;
-    color: white;
+    background-color: rgb(13, 5, 58);
+    color: rgb(177, 19, 8);
 }
 
 #image
@@ -13,6 +13,7 @@
     margin-top: 20px;
     margin-left: 20px;
     margin-bottom: 20px;
+    border: 3px solid rgb(177, 19, 8);
 }
 
 #name
@@ -31,7 +32,7 @@
 {
     width: 350px;
     height: 7px;
-    background: grey;
+    background:  rgb(177, 19, 8);
     margin-top: 10px;
 }
 
@@ -42,9 +43,9 @@
 
 #edu
 {
-    background:grey;
+    background:rgb(22, 11, 85);
     padding: 10px;
-    color:black;
+    color:  rgb(177, 19, 8);
     font-weight: bold;
 }
 
@@ -52,14 +53,14 @@
 {
     text-align: justify;
     margin-left: 0px;
-    color: white;
+    color:  rgb(177, 19, 8);
 }
 
 #proj
 {
-    background:grey;
+    background:  rgb(22, 11, 85);
     padding: 10px;
-    color:black;
+    color: rgb(177, 19, 8);
     font-weight: bold;
 }
 
@@ -67,44 +68,31 @@
 {
     text-align: justify;
     margin-left: 0px;
-    color: white;
+    color:  rgb(177, 19, 8);
 }
 
 
 #hobb
 {
-    background:grey;
+    background:  rgb(22, 11, 85);
     padding: 10px;
-    color:black;
+    color: rgb(177, 19, 8);
     font-weight: bold;
-    text-align: right;
+    
 }
 
 #hobb1
 {
-    text-align: right;
     margin-left: 0px;
-    color: white;
+    color:  rgb(177, 19, 8);
 }
 
-#education-hobbies
-{
-    display: grid;
-    grid-template-columns: 6.5fr 1.8fr; 
-}
-
-#right
-{
-padding: 0;
-margin: 0;
-text-align: right;
-}
 
 #aw
 {
-    background:grey;
+    background: rgb(22, 11, 85);
     padding: 10px;
-    color:black;
+    color: rgb(177, 19, 8);
     font-weight: bold;
 }
 
@@ -112,15 +100,15 @@ text-align: right;
 {
     text-align: justify;
     margin-left: 0px;
-    color: white;
+    color:  rgb(177, 19, 8);
 }
 
 
 #sk
 {
-    background:grey;
+    background: rgb(22, 11, 85);
     padding: 10px;
-    color:black;
+    color: rgb(177, 19, 8);
     font-weight: bold;
 }
 
@@ -128,14 +116,14 @@ text-align: right;
 {
     text-align: justify;
     margin-left: 0px;
-    color: white;
+    color:  rgb(177, 19, 8);
 }
 
 #cont
 {
-    background:grey;
+    background: rgb(22, 11, 85);
     padding: 10px;
-    color:black;
+    color: rgb(177, 19, 8);
     font-weight: bold;
 }
 
@@ -143,15 +131,15 @@ text-align: right;
 {
     text-align: justify;
     margin-left: 0px;
-    color: white;
+    color:  rgb(177, 19, 8);
 }
 
 
 #lang
 {
-    background:grey;
+    background: rgb(22, 11, 85);
     padding: 10px;
-    color:black;
+    color: rgb(177, 19, 8);
     font-weight: bold;
 }
 
@@ -159,8 +147,43 @@ text-align: right;
 {
     text-align: justify;
     margin-left: 0px;
-    color: white;
+    color:  rgb(177, 19, 8);
 }
 
+#toggleButton
+{
+    font-size: 0.8em;
+}
+
+.flex
+{
+    display: flex;
+}
+
+button{
+    
+    background: rgb(177, 19, 8);
+    height: 40px;
+    width: 50px;
+}
+/*#button-align
+{
+    display: grid;
+    
+}*/
+
+
+/*#education-hobbies
+{
+    display: grid;
+    grid-template-columns: 6.5fr 1.8fr; 
+}
+
+#right                                            was used for hobbies
+{
+padding: 0;
+margin: 0;
+text-align: right;
+}*/
 
 
